<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/general">
        <Preference
            app:icon="@drawable/ruler"
            app:key="@string/pref_unit_settings"
            app:title="@string/units" />
        <Preference
            app:icon="@drawable/ic_sensors"
            app:key="@string/pref_sensor_settings"
            app:title="@string/sensors" />
        <Preference
            app:icon="@drawable/ic_visible"
            app:key="@string/pref_privacy_settings"
            app:title="@string/privacy" />
        <Preference
            app:key="@string/pref_backup_settings"
            app:title="@string/backup_restore"
            app:icon="@drawable/backup_restore" />
        <Preference
            app:icon="@drawable/apps"
            app:key="@string/pref_plugins_settings"
            app:title="@string/plugins" />
        <Preference
            app:icon="@drawable/ic_experimental"
            app:key="@string/pref_experimental_settings"
            app:title="@string/experimental" />
        <Preference
            app:icon="@drawable/ic_alert"
            app:key="@string/pref_error_settings"
            app:title="@string/errors" />
        <Preference
            android:key="@string/pref_diagnostics"
            android:title="@string/diagnostics"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="@string/pref_open_source_licenses"
            android:title="@string/pref_open_source_licenses_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="@string/pref_tool_category_holder_key"
        app:singleLineTitle="false"
        app:title="@string/tools">

        <Preference
            app:icon="@drawable/apps"
            app:key="@string/pref_tool_settings_header_key"
            app:singleLineTitle="false"
            app:title="@string/tools" />

    </PreferenceCategory>

</PreferenceScreen>
